add notebook files

--- a/notebooks/02_feature_engineering.ipynb
+++ b/notebooks/02_feature_engineering.ipynb
@@ -2,449 +2,91 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "fbb79ee3",
    "metadata": {},
    "source": [
-    "## 8. Observations\n",
-    "\n",
-    "- Numeric features are standardized (mean 0, variance 1).  \n",
-    "- Categorical features are one-hot encoded (dummy variables created).  \n",
-    "- The final feature matrix has many more columns than the original dataset due to encoding.  \n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d585382c",
-   "metadata": {},
-   "source": [
-    "## 7. Inspect Transformed Features\n"
+    "# Feature Engineering\n",
+    "This notebook preprocesses the datasets using scaling + one-hot encoding."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "eb6a3d62",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Total features after preprocessing: 41\n",
-      "First 20 features: ['age', 'Medu', 'Fedu', 'traveltime', 'studytime', 'failures', 'famrel', 'freetime', 'goout', 'Dalc', 'Walc', 'health', 'absences', 'G1', 'G2', 'school_MS', 'sex_M', 'address_U', 'famsize_LE3', 'Pstatus_T']\n"
-     ]
-    }
-   ],
-   "source": [
-    "from sklearn.preprocessing import OneHotEncoder\n",
-    "\n",
-    "# Extract the fitted OneHotEncoder from the preprocessor\n",
-    "ohe = preprocessor.named_transformers_[\"cat\"]\n",
-    "\n",
-    "# Get encoded feature names for categorical columns\n",
-    "ohe_features = ohe.get_feature_names_out(categorical_cols)\n",
-    "\n",
-    "# Combine numeric + encoded categorical features\n",
-    "all_features = numeric_cols + list(ohe_features)\n",
-    "\n",
-    "print(\"Total features after preprocessing:\", len(all_features))\n",
-    "print(\"First 20 features:\", all_features[:20])\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d5d9eb8c",
-   "metadata": {},
-   "source": [
-    "## 6. Fit and Transform Sample\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "900e31a0",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Transformed shape: (5, 41)\n"
-     ]
-    }
-   ],
-   "source": [
-    "# 1. Split train/test\n",
-    "X_train, X_test, y_train, y_test = train_test_split(\n",
-    "    X, y, test_size=0.2, random_state=42\n",
-    ")\n",
-    "\n",
-    "# 2. Build the preprocessor (THIS was missing in your code)\n",
-    "preprocessor = build_preprocessor(numeric_cols, categorical_cols)\n",
-    "\n",
-    "# 3. Fit the preprocessor\n",
-    "preprocessor.fit(X_train)\n",
-    "\n",
-    "# 4. Transform a small sample\n",
-    "X_train_transformed = preprocessor.transform(X_train.head())\n",
-    "print(\"Transformed shape:\", X_train_transformed.shape)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "d63a0a08",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.preprocessing import StandardScaler, OneHotEncoder\n",
-    "from sklearn.compose import ColumnTransformer\n",
-    "\n",
-    "def build_preprocessor(numeric_cols, categorical_cols):\n",
-    "    \"\"\"\n",
-    "    Build a ColumnTransformer for preprocessing:\n",
-    "    - Standardize numeric columns\n",
-    "    - One-hot encode categorical columns\n",
-    "    \"\"\"\n",
-    "    return ColumnTransformer(\n",
-    "        transformers=[\n",
-    "            (\"num\", StandardScaler(), numeric_cols),\n",
-    "            (\"cat\", OneHotEncoder(drop=\"first\", handle_unknown=\"ignore\"), categorical_cols),\n",
-    "        ]\n",
-    "    )\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "26377758",
-   "metadata": {},
-   "source": [
-    "## 5. Build Preprocessor\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "04ca8481",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Numeric columns: ['age', 'Medu', 'Fedu', 'traveltime', 'studytime', 'failures', 'famrel', 'freetime', 'goout', 'Dalc'] ... total: 15\n",
-      "Categorical columns: ['school', 'sex', 'address', 'famsize', 'Pstatus', 'Mjob', 'Fjob', 'reason', 'guardian', 'schoolsup'] ... total: 17\n"
-     ]
-    }
-   ],
-   "source": [
-    "numeric_cols = X.select_dtypes(include=[\"int64\", \"float64\"]).columns.tolist()\n",
-    "categorical_cols = X.select_dtypes(include=[\"object\"]).columns.tolist()\n",
-    "\n",
-    "print(\"Numeric columns:\", numeric_cols[:10], \"... total:\", len(numeric_cols))\n",
-    "print(\"Categorical columns:\", categorical_cols[:10], \"... total:\", len(categorical_cols))\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6dda4431",
-   "metadata": {},
-   "source": [
-    "## 4. Identify Numeric and Categorical Columns\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "475820f2",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Features shape: (395, 32)\n",
-      "Target shape: (395,)\n"
-     ]
-    }
-   ],
-   "source": [
-    "y = df[\"G3\"]\n",
-    "X = df.drop(\"G3\", axis=1)\n",
-    "\n",
-    "print(\"Features shape:\", X.shape)\n",
-    "print(\"Target shape:\", y.shape)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "559ec723",
-   "metadata": {},
-   "source": [
-    "## 3. Split Features and Target\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "0ef67dcd",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2025-09-20 20:13:56,734 [INFO] Math dataset loaded successfully with shape (395, 33)\n",
-      "2025-09-20 20:13:56,735 [INFO] Portuguese dataset loaded successfully with shape (649, 33)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Dataset shape: (395, 33)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>school</th>\n",
-       "      <th>sex</th>\n",
-       "      <th>age</th>\n",
-       "      <th>address</th>\n",
-       "      <th>famsize</th>\n",
-       "      <th>Pstatus</th>\n",
-       "      <th>Medu</th>\n",
-       "      <th>Fedu</th>\n",
-       "      <th>Mjob</th>\n",
-       "      <th>Fjob</th>\n",
-       "      <th>...</th>\n",
-       "      <th>famrel</th>\n",
-       "      <th>freetime</th>\n",
-       "      <th>goout</th>\n",
-       "      <th>Dalc</th>\n",
-       "      <th>Walc</th>\n",
-       "      <th>health</th>\n",
-       "      <th>absences</th>\n",
-       "      <th>G1</th>\n",
-       "      <th>G2</th>\n",
-       "      <th>G3</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>GP</td>\n",
-       "      <td>F</td>\n",
-       "      <td>18</td>\n",
-       "      <td>U</td>\n",
-       "      <td>GT3</td>\n",
-       "      <td>A</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "      <td>at_home</td>\n",
-       "      <td>teacher</td>\n",
-       "      <td>...</td>\n",
-       "      <td>4</td>\n",
-       "      <td>3</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>6</td>\n",
-       "      <td>5</td>\n",
-       "      <td>6</td>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>GP</td>\n",
-       "      <td>F</td>\n",
-       "      <td>17</td>\n",
-       "      <td>U</td>\n",
-       "      <td>GT3</td>\n",
-       "      <td>T</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>at_home</td>\n",
-       "      <td>other</td>\n",
-       "      <td>...</td>\n",
-       "      <td>5</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>4</td>\n",
-       "      <td>5</td>\n",
-       "      <td>5</td>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>GP</td>\n",
-       "      <td>F</td>\n",
-       "      <td>15</td>\n",
-       "      <td>U</td>\n",
-       "      <td>LE3</td>\n",
-       "      <td>T</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>at_home</td>\n",
-       "      <td>other</td>\n",
-       "      <td>...</td>\n",
-       "      <td>4</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>10</td>\n",
-       "      <td>7</td>\n",
-       "      <td>8</td>\n",
-       "      <td>10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>GP</td>\n",
-       "      <td>F</td>\n",
-       "      <td>15</td>\n",
-       "      <td>U</td>\n",
-       "      <td>GT3</td>\n",
-       "      <td>T</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2</td>\n",
-       "      <td>health</td>\n",
-       "      <td>services</td>\n",
-       "      <td>...</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>5</td>\n",
-       "      <td>2</td>\n",
-       "      <td>15</td>\n",
-       "      <td>14</td>\n",
-       "      <td>15</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>GP</td>\n",
-       "      <td>F</td>\n",
-       "      <td>16</td>\n",
-       "      <td>U</td>\n",
-       "      <td>GT3</td>\n",
-       "      <td>T</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>other</td>\n",
-       "      <td>other</td>\n",
-       "      <td>...</td>\n",
-       "      <td>4</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>5</td>\n",
-       "      <td>4</td>\n",
-       "      <td>6</td>\n",
-       "      <td>10</td>\n",
-       "      <td>10</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 33 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  school sex  age address famsize Pstatus  Medu  Fedu     Mjob      Fjob  ...  \\\n",
-       "0     GP   F   18       U     GT3       A     4     4  at_home   teacher  ...   \n",
-       "1     GP   F   17       U     GT3       T     1     1  at_home     other  ...   \n",
-       "2     GP   F   15       U     LE3       T     1     1  at_home     other  ...   \n",
-       "3     GP   F   15       U     GT3       T     4     2   health  services  ...   \n",
-       "4     GP   F   16       U     GT3       T     3     3    other     other  ...   \n",
-       "\n",
-       "  famrel freetime  goout  Dalc  Walc health absences  G1  G2  G3  \n",
-       "0      4        3      4     1     1      3        6   5   6   6  \n",
-       "1      5        3      3     1     1      3        4   5   5   6  \n",
-       "2      4        3      2     2     3      3       10   7   8  10  \n",
-       "3      3        2      2     1     1      5        2  15  14  15  \n",
-       "4      4        3      2     1     2      5        4   6  10  10  \n",
-       "\n",
-       "[5 rows x 33 columns]"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "mat, por = load_data()\n",
-    "df = mat.copy()\n",
-    "\n",
-    "print(\"Dataset shape:\", df.shape)\n",
-    "df.head()\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "410e6846",
-   "metadata": {},
-   "source": [
-    "## 2. Load Data\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "be76b8f6",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os, sys\n",
+    "sys.path.insert(0, os.path.abspath(os.path.join(os.path.dirname('__file__'), \"..\")))\n",
+    "\n",
     "import pandas as pd\n",
-    "\n",
-    "# Add ../src to Python path\n",
-    "sys.path.append(os.path.abspath(os.path.join(\"..\", \"src\")))\n",
-    "\n",
-    "from data_loader import load_data\n",
-    "from preprocessing import build_preprocessor\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "\n"
+    "from src.data_loader import load_data\n",
+    "from src.preprocessing import build_preprocessor"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "435bac10",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "# 02 Feature Engineering\n",
+    "# Load Portuguese dataset for demonstration\n",
+    "_, por = load_data()\n",
+    "if por is None:\n",
+    "    print(\"Dataset not found!\")\n",
+    "else:\n",
+    "    print(\"Dataset loaded successfully!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = por.drop(\"G3\", axis=1)\n",
+    "y = por[\"G3\"]\n",
     "\n",
-    "This notebook demonstrates preprocessing for the student performance dataset.  \n",
-    "We identify feature types (numeric vs categorical), build transformations,  \n",
-    "and preview the transformed feature matrix.\n"
+    "print(\"Features shape:\", X.shape)\n",
+    "print(\"Target shape:\", y.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Identify column types\n",
+    "numeric_cols = X.select_dtypes(include=[\"int64\", \"float64\"]).columns.tolist()\n",
+    "categorical_cols = X.select_dtypes(include=[\"object\"]).columns.tolist()\n",
+    "\n",
+    "print(\"Numeric columns:\", numeric_cols)\n",
+    "print(\"Categorical columns:\", categorical_cols)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Build preprocessor and transform\n",
+    "preprocessor = build_preprocessor(numeric_cols, categorical_cols)\n",
+    "X_transformed = preprocessor.fit_transform(X)\n",
+    "\n",
+    "print(\"Original shape:\", X.shape)\n",
+    "print(\"Transformed shape:\", X_transformed.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Display feature names after transformation\n",
+    "feature_names = preprocessor.get_feature_names_out()\n",
+    "print(\"Number of features after preprocessing:\", len(feature_names))\n",
+    "print(\"First 10 features:\", feature_names[:10])"
    ]
   }
  ],
@@ -455,18 +97,10 @@
    "name": "python3"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
    "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 5
+ "nbformat_minor": 4
 }
