--- a/notebooks/01_data_exploration.ipynb
+++ b/notebooks/01_data_exploration.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,11 +28,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -41,15 +36,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-09-27 12:29:06,143 [INFO] Math dataset loaded successfully with shape (395, 33)\n",
-      "2025-09-27 12:29:06,145 [INFO] Portuguese dataset loaded successfully with shape (649, 33)\n"
+      "2025-09-27 17:59:15,459 [INFO] Math dataset loaded successfully with shape (395, 33)\n",
+      "2025-09-27 17:59:15,472 [INFO] Portuguese dataset loaded successfully with shape (649, 33)\n"
      ]
     }
    ],
@@ -60,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +179,8 @@
     "    print(\"=== Math Dataset ===\")\n",
     "    summarize_dataset(mat)\n",
     "    plot_distributions(mat, dataset_name=\"math\")\n",
-    "    plot_correlation_heatmap(mat, dataset_name=\"math\")"
+    "    plot_correlation_heatmap(mat, dataset_name=\"math\")\n",
+    " \n"
    ]
   }
  ],
