--- a/notebooks/02_feature_engineering.ipynb
+++ b/notebooks/02_feature_engineering.ipynb
@@ -10,23 +10,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os, sys\n",
-    "sys.path.insert(0, os.path.abspath(os.path.join(os.path.dirname('__file__'), \"..\")))\n",
-    "\n",
+    "from pathlib import Path\n",
+    "import sys\n",
     "import pandas as pd\n",
-    "from src.data_loader import load_data\n",
-    "from src.preprocessing import build_preprocessor"
+    "\n",
+    "# Add src folder directly\n",
+    "src_path = Path.cwd().parent / \"src\"\n",
+    "sys.path.insert(0, str(src_path))\n",
+    "\n",
+    "from data_loader import load_data\n",
+    "from preprocessing import build_preprocessor\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2025-09-27 12:33:36,157 [INFO] Math dataset loaded successfully with shape (395, 33)\n",
+      "2025-09-27 12:33:36,160 [INFO] Portuguese dataset loaded successfully with shape (649, 33)\n",
+      "Dataset loaded successfully!\n"
+     ]
+    }
+   ],
    "source": [
     "# Load Portuguese dataset for demonstration\n",
     "_, por = load_data()\n",
@@ -38,9 +52,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Features shape: (649, 32)\n",
+      "Target shape: (649,)\n"
+     ]
+    }
+   ],
    "source": [
     "X = por.drop(\"G3\", axis=1)\n",
     "y = por[\"G3\"]\n",
@@ -51,9 +74,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Numeric columns: ['age', 'Medu', 'Fedu', 'traveltime', 'studytime', 'failures', 'famrel', 'freetime', 'goout', 'Dalc', 'Walc', 'health', 'absences', 'G1', 'G2']\n",
+      "Categorical columns: ['school', 'sex', 'address', 'famsize', 'Pstatus', 'Mjob', 'Fjob', 'reason', 'guardian', 'schoolsup', 'famsup', 'paid', 'activities', 'nursery', 'higher', 'internet', 'romantic']\n"
+     ]
+    }
+   ],
    "source": [
     "# Identify column types\n",
     "numeric_cols = X.select_dtypes(include=[\"int64\", \"float64\"]).columns.tolist()\n",
@@ -65,9 +97,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original shape: (649, 32)\n",
+      "Transformed shape: (649, 41)\n"
+     ]
+    }
+   ],
    "source": [
     "# Build preprocessor and transform\n",
     "preprocessor = build_preprocessor(numeric_cols, categorical_cols)\n",
@@ -79,9 +120,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of features after preprocessing: 41\n",
+      "First 10 features: ['num__age' 'num__Medu' 'num__Fedu' 'num__traveltime' 'num__studytime'\n",
+      " 'num__failures' 'num__famrel' 'num__freetime' 'num__goout' 'num__Dalc']\n"
+     ]
+    }
+   ],
    "source": [
     "# Display feature names after transformation\n",
     "feature_names = preprocessor.get_feature_names_out()\n",
@@ -97,7 +148,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.12.3"
   }
  },
