--- a/notebooks/03_modeling.ipynb
+++ b/notebooks/03_modeling.ipynb
@@ -10,50 +10,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'utils'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[3], line 9\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mensemble\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m RandomForestRegressor\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpipeline\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m Pipeline\n\u001b[1;32m----> 9\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01msrc\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdata_loader\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m load_data\n\u001b[0;32m     10\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01msrc\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpreprocessing\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m build_preprocessor\n\u001b[0;32m     11\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01msrc\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmodel\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m train_model, evaluate_model, save_model\n",
-      "File \u001b[1;32mc:\\Users\\16412\\Documents\\Projects\\student-grade-prediction\\src\\data_loader.py:3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mos\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mpandas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mutils\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m get_logger\n\u001b[0;32m      5\u001b[0m \u001b[38;5;66;03m# Initialize logger for this module\u001b[39;00m\n\u001b[0;32m      6\u001b[0m logger \u001b[38;5;241m=\u001b[39m get_logger(\u001b[38;5;18m__name__\u001b[39m)\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'utils'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import os, sys\n",
-    "sys.path.insert(0, os.path.abspath(os.path.join(os.path.dirname('__file__'), \"..\")))\n",
+    "import sys\n",
+    "from pathlib import Path\n",
     "\n",
-    "import pandas as pd\n",
+    "# Add the src folder directly\n",
+    "src_path = Path.cwd().parent / \"src\"\n",
+    "sys.path.insert(0, str(src_path))\n",
+    "\n",
+    "from data_loader import load_data\n",
+    "from preprocessing import build_preprocessor\n",
+    "from model import train_model, evaluate_model, save_model\n",
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn.pipeline import Pipeline\n",
-    "\n",
-    "from src.data_loader import load_data\n",
-    "from src.preprocessing import build_preprocessor\n",
-    "from src.model import train_model, evaluate_model, save_model"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'load_data' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[2], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Load dataset (Math for example)\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m mat, _ \u001b[38;5;241m=\u001b[39m \u001b[43mload_data\u001b[49m()\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m mat \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m      4\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDataset not found!\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'load_data' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2025-09-27 17:20:48,645 [INFO] Math dataset loaded successfully with shape (395, 33)\n",
+      "2025-09-27 17:20:48,648 [INFO] Portuguese dataset loaded successfully with shape (649, 33)\n",
+      "Math dataset loaded successfully!\n",
+      "Shape: (395, 33)\n"
      ]
     }
    ],
@@ -69,9 +58,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Numeric columns: 15\n",
+      "Categorical columns: 17\n"
+     ]
+    }
+   ],
    "source": [
     "X = mat.drop(\"G3\", axis=1)\n",
     "y = mat[\"G3\"]\n",
@@ -85,9 +83,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Models to train: ['linear_regression', 'random_forest']\n"
+     ]
+    }
+   ],
    "source": [
     "# Define models\n",
     "models = {\n",
@@ -100,9 +106,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "=== Training linear_regression ===\n",
+      "2025-09-27 17:20:48,841 [INFO] ✅ Model training completed. Train size: 316, Test size: 79\n",
+      "2025-09-27 17:20:48,886 [INFO] 📊 Model evaluation completed. Metrics saved to: results/metrics\\metrics_math_linear_regression.csv\n",
+      "2025-09-27 17:20:48,888 [INFO]    MAE: 1.647, RMSE: 2.378, R²: 0.724\n",
+      "2025-09-27 17:20:48,909 [INFO] [SAVE] Versioned model saved at: results/models\\linear_regression_math.pkl\n",
+      "2025-09-27 17:20:48,925 [INFO] [SAVE] Latest model updated at: results/models\\latest_model.pkl\n",
+      "linear_regression training completed!\n",
+      "\n",
+      "=== Training random_forest ===\n",
+      "2025-09-27 17:20:49,452 [INFO] ✅ Model training completed. Train size: 316, Test size: 79\n",
+      "2025-09-27 17:20:49,492 [INFO] 📊 Model evaluation completed. Metrics saved to: results/metrics\\metrics_math_random_forest.csv\n",
+      "2025-09-27 17:20:49,494 [INFO]    MAE: 1.179, RMSE: 1.958, R²: 0.813\n",
+      "2025-09-27 17:20:49,569 [INFO] [SAVE] Versioned model saved at: results/models\\random_forest_math.pkl\n",
+      "2025-09-27 17:20:49,642 [INFO] [SAVE] Latest model updated at: results/models\\latest_model.pkl\n",
+      "random_forest training completed!\n"
+     ]
+    }
+   ],
    "source": [
     "results = {}\n",
     "\n",
@@ -128,15 +157,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "=== Model Results ===\n",
+      "\n",
+      "linear_regression:\n",
+      "  mae: 1.6470\n",
+      "  mse: 5.6570\n",
+      "  rmse: 2.3780\n",
+      "  r2: 0.7240\n",
+      "  dataset: math_linear_regression\n",
+      "  timestamp: 2025-09-27 17:20:48\n",
+      "\n",
+      "random_forest:\n",
+      "  mae: 1.1790\n",
+      "  mse: 3.8350\n",
+      "  rmse: 1.9580\n",
+      "  r2: 0.8130\n",
+      "  dataset: math_random_forest\n",
+      "  timestamp: 2025-09-27 17:20:49\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"\\n=== Model Results ===\")\n",
     "for model_name, metrics in results.items():\n",
     "    print(f\"\\n{model_name}:\")\n",
     "    for metric, value in metrics.items():\n",
-    "        print(f\"  {metric}: {value:.4f}\")"
+    "        if isinstance(value, (int, float)):   \n",
+    "            print(f\"  {metric}: {value:.4f}\")\n",
+    "        else:                                 \n",
+    "            print(f\"  {metric}: {value}\")\n"
    ]
   }
  ],
