--- a/notebooks/01_data_exploration.ipynb
+++ b/notebooks/01_data_exploration.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,10 +21,10 @@
     "project_root = Path.cwd().parent\n",
     "src_path = project_root / \"src\"\n",
     "sys.path.insert(0, str(src_path))\n",
-    "\n",
-    "from data_loader import load_data\n",
-    "from preprocessing import build_preprocessor\n",
-    "from eda import summarize_dataset, plot_distributions, plot_correlation_heatmap\n"
+    "from src.data_loader import load_data\n",
+    "from src.preprocessing import build_preprocessor\n",
+    "from src.eda import summarize_dataset, plot_distributions, plot_correlation_heatmap\n",
+    "\n"
    ]
   },
   {
@@ -36,15 +36,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-09-27 17:59:15,459 [INFO] Math dataset loaded successfully with shape (395, 33)\n",
-      "2025-09-27 17:59:15,472 [INFO] Portuguese dataset loaded successfully with shape (649, 33)\n"
+      "2025-09-29 09:20:56,938 [INFO] Math dataset loaded successfully with shape (395, 33)\n",
+      "2025-09-29 09:20:56,940 [INFO] Portuguese dataset loaded successfully with shape (649, 33)\n"
      ]
     }
    ],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
