--- a/notebooks/03_modeling.ipynb
+++ b/notebooks/03_modeling.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,15 +32,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-09-27 17:20:48,645 [INFO] Math dataset loaded successfully with shape (395, 33)\n",
-      "2025-09-27 17:20:48,648 [INFO] Portuguese dataset loaded successfully with shape (649, 33)\n",
+      "2025-09-29 09:20:48,201 [INFO] Math dataset loaded successfully with shape (395, 33)\n",
+      "2025-09-29 09:20:48,203 [INFO] Portuguese dataset loaded successfully with shape (649, 33)\n",
       "Math dataset loaded successfully!\n",
       "Shape: (395, 33)\n"
      ]
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -115,19 +115,25 @@
      "text": [
       "\n",
       "=== Training linear_regression ===\n",
-      "2025-09-27 17:20:48,841 [INFO] ✅ Model training completed. Train size: 316, Test size: 79\n",
-      "2025-09-27 17:20:48,886 [INFO] 📊 Model evaluation completed. Metrics saved to: results/metrics\\metrics_math_linear_regression.csv\n",
-      "2025-09-27 17:20:48,888 [INFO]    MAE: 1.647, RMSE: 2.378, R²: 0.724\n",
-      "2025-09-27 17:20:48,909 [INFO] [SAVE] Versioned model saved at: results/models\\linear_regression_math.pkl\n",
-      "2025-09-27 17:20:48,925 [INFO] [SAVE] Latest model updated at: results/models\\latest_model.pkl\n",
+      "2025-09-29 09:20:48,318 [INFO] ✅ Model training completed. Train size: 316, Test size: 79\n",
+      "2025-09-29 09:20:48,347 [INFO] 📊 Model evaluation completed. Metrics saved to: results/metrics\\metrics_math_linear_regression.csv\n",
+      "2025-09-29 09:20:48,350 [INFO]    MAE: 1.647, RMSE: 2.378, R²: 0.724\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2025-09-29 09:20:48,370 [INFO] [SAVE] Versioned model saved at: results/models\\linear_regression_math.pkl\n",
+      "2025-09-29 09:20:48,384 [INFO] [SAVE] Latest model updated at: results/models\\latest_model.pkl\n",
       "linear_regression training completed!\n",
       "\n",
       "=== Training random_forest ===\n",
-      "2025-09-27 17:20:49,452 [INFO] ✅ Model training completed. Train size: 316, Test size: 79\n",
-      "2025-09-27 17:20:49,492 [INFO] 📊 Model evaluation completed. Metrics saved to: results/metrics\\metrics_math_random_forest.csv\n",
-      "2025-09-27 17:20:49,494 [INFO]    MAE: 1.179, RMSE: 1.958, R²: 0.813\n",
-      "2025-09-27 17:20:49,569 [INFO] [SAVE] Versioned model saved at: results/models\\random_forest_math.pkl\n",
-      "2025-09-27 17:20:49,642 [INFO] [SAVE] Latest model updated at: results/models\\latest_model.pkl\n",
+      "2025-09-29 09:20:48,854 [INFO] ✅ Model training completed. Train size: 316, Test size: 79\n",
+      "2025-09-29 09:20:48,901 [INFO] 📊 Model evaluation completed. Metrics saved to: results/metrics\\metrics_math_random_forest.csv\n",
+      "2025-09-29 09:20:48,903 [INFO]    MAE: 1.179, RMSE: 1.958, R²: 0.813\n",
+      "2025-09-29 09:20:48,978 [INFO] [SAVE] Versioned model saved at: results/models\\random_forest_math.pkl\n",
+      "2025-09-29 09:20:49,050 [INFO] [SAVE] Latest model updated at: results/models\\latest_model.pkl\n",
       "random_forest training completed!\n"
      ]
     }
@@ -157,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +179,7 @@
       "  rmse: 2.3780\n",
       "  r2: 0.7240\n",
       "  dataset: math_linear_regression\n",
-      "  timestamp: 2025-09-27 17:20:48\n",
+      "  timestamp: 2025-09-29 09:20:48\n",
       "\n",
       "random_forest:\n",
       "  mae: 1.1790\n",
@@ -181,7 +187,7 @@
       "  rmse: 1.9580\n",
       "  r2: 0.8130\n",
       "  dataset: math_random_forest\n",
-      "  timestamp: 2025-09-27 17:20:49\n"
+      "  timestamp: 2025-09-29 09:20:48\n"
      ]
     }
    ],
