--- a/notebooks/04_predictions.ipynb
+++ b/notebooks/04_predictions.ipynb
@@ -10,12 +10,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os, sys\n",
     "sys.path.insert(0, os.path.abspath(os.path.join(os.path.dirname('__file__'), \"..\")))\n",
+    "import glob\n",
+    "import os\n",
     "\n",
     "import pandas as pd\n",
     "from src.predict import run_prediction"
@@ -23,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +191,7 @@
       "  Student 9: 18.62 (rounded: 19)\n",
       "  Student 10: 15.64 (rounded: 16)\n",
       "\n",
-      "✅ Predictions saved to: ../results/predictions\\predictions_20250927_164831.csv\n",
+      "✅ Predictions saved to: ../results/predictions\\predictions_20250929_092252.csv\n",
       "Predictions completed!\n"
      ]
     }
@@ -206,14 +208,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded: ../results/predictions\\predictions_20250927_164831.csv\n",
+      "Loaded: ../results/predictions\\predictions_20250929_092252.csv\n",
       "Predictions shape: (395, 2)\n",
       "\n",
       "First 10 predictions:\n"
